--- a/views/login/registerForm.ejs
+++ b/views/login/registerForm.ejs
@@ -6,7 +6,7 @@
 <body class="text-center"> 
     <main class="form-signin">
         <form action="/register" method="POST">
-            <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+            <img class="mb-4" src="https://wcc.yccd.edu/wp-content/uploads/2020/02/Dog.png" alt="" width="72" height="57">
             <h1 class="h3 mb-3 fw-normal">Register Form</h1>
 
             <div class="form-floating">
