--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <div class="container py-3">
         <%- include('partials/navbar') %>
         <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-            <h1>Welcome to Angel's Services</h1>
+            <h1>See All of Our Wonderfull Service Dogs</h1>
             <div style="padding: 10px">
                 <% data.forEach(e=>{ %>
                     <div class="card dog-card">
@@ -29,11 +29,3 @@
     </div>
 </body>
 </html>
-
-<!-- nnti di hapus ato ubah cmn mempergmpng dev aja -->
-<h1 align="center">
-    <a href="/dogs">dogs</a> <br>
-    <a href="/dogs/admin">dogs admin</a>
-
-
-</h1>
