--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,11 @@
     </a>
 
     <ul class="nav nav-pills">
+      <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
       <li class="nav-item"><a href="/dogs" class="nav-link">See All of Our Wonderfull Service Dogs</a></li>
-      <li class="nav-item"><a href="/dogs/admin" class="nav-link">Admin View</a></li>
-    </ul>
+      <% if(user.role === 'Admin') {%><li class="nav-item"><a href="/dogs/admin" class="nav-link">Admin View</a></li><% } %>
+      <% if(user.isLogin){ %> <li class="nav-item"><a href="#" class="nav-link"><font color="black">Hallo,  <%= user.username %></font></a></li> 
+      <li class="nav-item"><a href="/logout" class="nav-link"><font color="black">Logout</font></a></li> 
+      <% } %>
+    </ul> <i class="bi bi-person-circle"></i>
 </header>
